# TrendForBrand

./: .gitignore  README.md
backend/: README.md  env.example  init_db.py  main.py  pyproject.toml
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: users.py
backend/app/models/: users.py
backend/app/schemas/: __init__.py  users.py
backend/app/services/: auth.py
