[project]
name = "trendforbrand"
version = "0.1.0"
description = "platform that helps microinfluencer and small business"
authors = [
    {name = "Omar",email = "omarmukatay@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Background Tasks
    "celery>=5.3.0",
    "redis>=4.5.0",
    
    # Validation & Serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",  # для валидации email
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # для тестирования FastAPI
    
    # Code Quality
    "black>=23.9.0",
    "ruff>=0.1.0",
    "flake8>=6.1.0",
    
    # Development Tools
    "python-dotenv>=1.0.0",  # для работы с .env файлами
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [
    { include = "app" }
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
